# physarum

./: Cargo.toml
src/: agent.rs  blur.rs  board.rs  cell.rs  lib.rs  timestep.rs  triplet.rs
src/layers/: trail_map.rs
src/math/: angle.rs  percent.rs  vec2ext.rs  vec2x.rs
