[package]
name = "physarum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rustc-hash = "1.1"
rand = "0.8.4"

[lib]
name = "physarum"
path = "src/lib.rs"

[[bin]]
name = "physarum"
path = "src/bin/main.rs"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 0